# teleporta

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
crates/teleporta/: Cargo.toml  README.md
crates/teleporta-core/: Cargo.toml
crates/teleporta-core/src/: decision.rs  lib.rs  well_known.rs
crates/teleporta-server/: Cargo.toml
crates/teleporta-server/src/: cache.rs  click_log.rs  config.rs  fallback.rs  lib.rs  main.rs  resolver.rs
crates/teleporta-server/src/api/: health.rs  links.rs  well_known.rs
crates/teleporta/src/: cache.rs  click_log.rs  config.rs  db.rs  decision.rs  error.rs  fallback.rs  lib.rs  link.rs  main.rs  platform.rs  resolver.rs  state.rs
crates/teleporta/src/api/: admin.rs  links.rs  mod.rs  well_known.rs
examples/: docker-compose.yml
migrations/: 0001_create_links.sql  0002_create_link_clicks.sql
