[workspace]
resolver = "2"
members = [
    "crates/teleporta",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Teleporta contributors"]
repository = "https://github.com/deatherving/teleporta"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"

[profile.release]
lto = "thin"
