[package]
name = "teleporta-core"
description = "Framework-independent core for Teleporta: link model, platform detection, routing decision, and app-link verification documents."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
