[package]
name = "teleporta-server"
description = "HTTP server for Teleporta: app-link router, fallback page, verification endpoints, link resolution, caching, and operational click logging."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[[bin]]
name = "teleporta-server"
path = "src/main.rs"

[dependencies]
teleporta-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
    "ipnetwork",
    "macros",
    "migrate",
] }

redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "connection-manager",
] }

ipnetwork = "0.20"
sha2 = "0.10"
hex = "0.4"
form_urlencoded = "1"

# AWS SDK — used only when the database auth mode is `iam` at runtime. Adds
# compile time and binary size, but keeps a single binary that supports both
# classic password auth and AWS RDS / Aurora IAM auth.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-rds = "1"

[dev-dependencies]
serial_test = "3"
http-body-util = "0.1"
